<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTweet</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="todo">TODO</string>
    <string name="Zero">0</string>
    <string name="detail_tweet">Detail Tweet</string>
    <string name="tweet">Tweet</string>
    <string name="what_happening">What\' happening</string>
    <string name="characters">Characters</string>

</resources>