<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ComposeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/twitter_blue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />


    <EditText
        android:id="@+id/etCompose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar1"
        android:layout_marginTop="70dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/what_happening"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:textColorHint="#546E7A" />

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCompose"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/Zero"
        tools:text="@string/Zero" />

    <TextView
        android:id="@+id/tvCharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCompose"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/tvDisplay"
        android:text="@string/characters"
        tools:text="Characters" />

    <Button
        android:id="@+id/btTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCompose"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/twitter_blue"
        android:text="@string/tweet"
        android:textColor="#ffffec"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar1"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_vector_close"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tvusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar1"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="15dp"
        android:layout_toStartOf="@+id/ivProfileImage"
        app:layout_constraintEnd_toStartOf="@+id/ivProfileImage" />

    <TextView
        android:id="@+id/tvuserscreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvusername"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_toStartOf="@+id/ivProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/tvusername" />

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/toolbar1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="11dp"

        android:layout_marginEnd="12dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        tools:srcCompat="@tools:sample/avatars[9]" />


</RelativeLayout>